hiding prelude at the cellular level

--- a/numhask.cabal
+++ b/numhask.cabal
@@ -93,3 +93,4 @@ test-suite doctests
         , base
         , numhask
         , doctest-parallel >=0.3 && <0.4
+    default-extensions: RebindableSyntax
