Put full GHC2024 back in.

--- a/numhask.cabal
+++ b/numhask.cabal
@@ -51,13 +51,77 @@ common ghc-options-stanza
     -Wpartial-fields
     -Wredundant-constraints
 
-common ghc2021-stanza
-  default-language:
-    GHC2021
+common ghc2024-stanza
+  if impl(ghc >=9.10)
+    default-language:
+      GHC2024
+  elif impl(ghc >=9.2)
+    default-language:
+      GHC2021
+    default-extensions:
+      DataKinds
+      DerivingStrategies
+      DisambiguateRecordFields
+      ExplicitNamespaces
+      GADTs
+      MonoLocalBinds
+      LambdaCase
+      RoleAnnotations
+  else
+    default-language:
+      Haskell2010
+    default-extensions:
+      BangPatterns
+      BinaryLiterals
+      ConstrainedClassMethods
+      ConstraintKinds
+      DeriveDataTypeable
+      DeriveFoldable
+      DeriveFunctor
+      DeriveGeneric
+      DeriveLift
+      DeriveTraversable
+      DoAndIfThenElse
+      EmptyCase
+      EmptyDataDecls
+      EmptyDataDeriving
+      ExistentialQuantification
+      ExplicitForAll
+      FlexibleContexts
+      FlexibleInstances
+      ForeignFunctionInterface
+      GADTSyntax
+      GeneralisedNewtypeDeriving
+      HexFloatLiterals
+      ImplicitPrelude
+      InstanceSigs
+      KindSignatures
+      MonomorphismRestriction
+      MultiParamTypeClasses
+      NamedFieldPuns
+      NamedWildCards
+      NumericUnderscores
+      PatternGuards
+      PolyKinds
+      PostfixOperators
+      RankNTypes
+      RelaxedPolyRec
+      ScopedTypeVariables
+      StandaloneDeriving
+      StarIsType
+      TraditionalRecordSyntax
+      TupleSections
+      TypeApplications
+      TypeOperators
+      TypeSynonymInstances
+  if impl(ghc <9.2) && impl(ghc >=8.10)
+    default-extensions:
+      ImportQualifiedPost
+      StandaloneKindSignatures
 
 library
   import: ghc-options-stanza
-  import: ghc2021-stanza
+  import: ghc2024-stanza
   hs-source-dirs: src
   build-depends: base >=4.14 && <5
   exposed-modules:
@@ -81,7 +145,7 @@ library
   default-extensions: RebindableSyntax
 
 test-suite doctests
-  import: ghc2021-stanza
+  import: ghc2024-stanza
   main-is: doctests.hs
   hs-source-dirs: test
   build-depends:
