Added Data instances

--- a/numhask.cabal
+++ b/numhask.cabal
@@ -1,6 +1,6 @@
 cabal-version: 3.0
 name: numhask
-version: 0.13.0.0
+version: 0.13.1.0
 license: BSD-3-Clause
 license-file: LICENSE
 copyright: Tony Day (c) 2016
@@ -27,6 +27,7 @@ description:
 
 build-type: Simple
 tested-with:
+  ghc ==8.10.7
   ghc ==9.6.7
   ghc ==9.8.4
   ghc ==9.10.2
