--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        ghc-version: ['9.12', '9.10', '9.8', '9.6']
+        ghc-version: ['9.12', '9.10', '9.8', '9.6','8.10']
 
         include:
           - os: windows-latest
