--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -9,6 +9,36 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  mhs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout mhs repo
+        uses: actions/checkout@v4
+        with:
+          repository: augustss/MicroHs
+          ref: v0.14.15.0
+          path: mhs
+
+      - name: make and install mhs
+        run: |
+          cd mhs
+          make minstall
+
+      - name: install extra packages
+        run: |
+          mcabal install ghccompat
+
+      - name: checkout this repo
+        uses: actions/checkout@v4
+        with:
+          path: tonyday567/numhask
+
+      - name: compile and install via mhs
+        run: |
+          PATH="$HOME/.mcabal/bin:$PATH"
+          cd mtl
+          mcabal install
+
   hlint:
     runs-on: ubuntu-latest
     steps:
