--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -23,10 +23,10 @@ jobs:
         run: |
           cd mhs
           make minstall
-          PATH="$HOME/.mcabal/bin:$PATH"
 
       - name: install extra packages
         run: |
+          PATH="$HOME/.mcabal/bin:$PATH"
           mcabal install ghc-compat
 
       - name: checkout this repo
@@ -36,7 +36,8 @@ jobs:
 
       - name: compile and install via mhs
         run: |
-          cd mtl
+          PATH="$HOME/.mcabal/bin:$PATH"
+          cd numhask
           mcabal install
 
   hlint:
