Removed multi-parameter deriving bugs

--- a/numhask.cabal
+++ b/numhask.cabal
@@ -51,6 +51,103 @@ common ghc-options-stanza
     -Wincomplete-uni-patterns
     -Wpartial-fields
     -Wredundant-constraints
+    -Wno-deprecated-flags
+
+common ghc-mhs-intersection
+  default-extensions:
+    BangPatterns
+    BinaryLiterals
+    ConstraintKinds
+    DeriveDataTypeable
+    DerivingStrategies
+    DoAndIfThenElse
+    EmptyCase
+    EmptyDataDecls
+    EmptyDataDeriving
+    ExistentialQuantification
+    ExplicitNamespaces
+    FlexibleContexts
+    FlexibleInstances
+    ForeignFunctionInterface
+    GADTSyntax
+    GADTs
+    ImportQualifiedPost
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MonoLocalBinds
+    MultiParamTypeClasses
+    NamedFieldPuns
+    NumericUnderscores
+    PolyKinds
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    StandaloneKindSignatures
+    TupleSections
+    TypeApplications
+    TypeSynonymInstances
+
+common ghc-mhs-difference
+  default-extensions:
+    ConstrainedClassMethods
+    DataKinds
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DisambiguateRecordFields
+    ExplicitForAll
+    GeneralisedNewtypeDeriving
+    HexFloatLiterals
+    ImplicitPrelude
+    MonomorphismRestriction
+    NamedWildCards
+    PatternGuards
+    PostfixOperators
+    RelaxedPolyRec
+    RoleAnnotations
+    StarIsType
+    TraditionalRecordSyntax
+    TypeOperators
+
+common mhs-ghc-difference
+  default-extensions:
+    AllowAmbiguousTypes
+    BlockArguments
+    DefaultSignatures
+    DeriveAnyClass
+    DerivingVia
+    DuplicateRecordFields
+    ExtendedDefaultRules
+    FunctionalDependencies
+    GeneralizedNewtypeDeriving
+    IncoherentInstances
+    LiberalTypeSynonyms
+    MagicHash
+    MultiWayIf
+    MultilineStrings
+    NamedDefaults
+    NegativeLiterals
+    NoMonomorphismRestriction
+    NoStarIsType
+    NondecreasingIndentation
+    OrPatterns
+    OverlappingInstances
+    OverloadedRecordDot
+    OverloadedRecordUpdate
+    OverloadedStrings
+    PatternSynonyms
+    PolymorphicComponents
+    QualifiedDo
+    RecordWildCards
+    RecursiveDo
+    RequiredTypeArguments
+    UndecidableInstances
+    UndecidableSuperClasses
+    UnicodeSyntax
+    ViewPatterns
 
 common ghc2021-additions
   default-extensions:
@@ -204,8 +301,12 @@ common ghc2024-stanza
 library
   import: ghc-options-stanza
   import: ghc2024-stanza
+  import: mhs-ghc-difference
   hs-source-dirs: src
-  build-depends: base >=4.14 && <5
+  build-depends:
+    base >=4.14 && <5,
+    containers,
+
   exposed-modules:
     NumHask
     NumHask.Algebra.Action
