--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -24,28 +24,17 @@ jobs:
       - uses: actions/checkout@v4
       - uses: haskell-actions/run-ormolu@v17
   build:
-    name: GHC ${{ matrix.ghc-version }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        ghc-version: ['9.14', '9.12', '9.10']
-
-        include:
-          - os: windows-latest
-            ghc-version: '9.14'
-          - os: macos-latest
-            ghc-version: '9.14'
+    name: GHC 9.14 on Linux
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up GHC ${{ matrix.ghc-version }}
+      - name: Set up GHC 9.14
         uses: haskell-actions/setup@v2
         id: setup
         with:
-          ghc-version: ${{ matrix.ghc-version }}
+          ghc-version: '9.14'
 
       - name: Configure the build
         run: |
